--- a/gb/19/11/7/n11639046.md
+++ b/gb/19/11/7/n11639046.md
@@ -1,62 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nnmtsc3385/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nnmtsc3385/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nnmtsc3385/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>体验不一样的过年 “2019巴宰族过新年”</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年11月07日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县平埔原住民<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E5%B7%B4%E5%AE%B0%E6%97%8F.md#1">巴宰族</a>将于11月9日（星期六）于苗栗县鲤鱼国民小学举办一年一度传统过新年活动，除了最具代表性的活动—“铜锣舞、走镖、牵田”，今年度同样办理宣读祖训、“ayan-mazuh”走标大合唱等活动，并在巴宰族群文化聚会所展示巴宰族相关古文书文物等文史资料、传统竹编捕鱼器具和早期农耕与生活器具，邀请社会大众一起来认识巴宰族，体验巴宰族的传统文化。</p>
-<p>本年度活动邀请的表演团体实力精湛，有连续第7年鲤鱼国小全体学生带来的大会舞表演，深植学生对特有族群文化的认识，并有沙麓拍瀑拉、后龙道卡斯和高雄小林大武垅等平埔族群的参与，另有本县的泰雅原住民族，三义乡双潭、双湖、鲤鱼等社区发展协会、台中市眉山社区发展协会等单位参与。各族群共同参与代表着族群和谐，<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E5%B7%B4%E5%AE%B0%E6%97%8F.md#1">巴宰族</a>也透过办理过新年活动，凝聚族人向心力，累积族群软实力，找回更多失落的过去，复振传承族群文化。</p>
+<p>【大纪元2019年11月07日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县平埔原住民<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%B4%E5%AE%B0%E6%97%8F.md#1">巴宰族</a>将于11月9日（星期六）于苗栗县鲤鱼国民小学举办一年一度传统过新年活动，除了最具代表性的活动—“铜锣舞、走镖、牵田”，今年度同样办理宣读祖训、“ayan-mazuh”走标大合唱等活动，并在巴宰族群文化聚会所展示巴宰族相关古文书文物等文史资料、传统竹编捕鱼器具和早期农耕与生活器具，邀请社会大众一起来认识巴宰族，体验巴宰族的传统文化。</p>
+<p>本年度活动邀请的表演团体实力精湛，有连续第7年鲤鱼国小全体学生带来的大会舞表演，深植学生对特有族群文化的认识，并有沙麓拍瀑拉、后龙道卡斯和高雄小林大武垅等平埔族群的参与，另有本县的泰雅原住民族，三义乡双潭、双湖、鲤鱼等社区发展协会、台中市眉山社区发展协会等单位参与。各族群共同参与代表着族群和谐，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%B4%E5%AE%B0%E6%97%8F.md#1">巴宰族</a>也透过办理过新年活动，凝聚族人向心力，累积族群软实力，找回更多失落的过去，复振传承族群文化。</p>
 <p>县长徐耀昌表示，苗栗县长期以来持续推动平埔族群语言文化复振工作，希望凝聚平埔意识，力促民族文化永续发展，乐见巴宰族群协会每年举办过新年活动，致力传承民族文化。</p>
 <p>苗栗县巴宰族群协会理事长潘英琦表示，近20年来，巴宰族对内是促使族亲积极学习巴宰语言以及重视技艺文化传承；对外则是希望让更多人认识巴宰族，得到社区民众、学校和公部门的认同与重视，不论对内对外，都是巴宰族未来要继续推展的重要文化发展工作。</p>
-<p>巴宰族过新年历年来都以文化传承、族群融合为活动主轴，今年已是第17年举办，每年在苗栗举办的巴宰族过新年，已成为凝聚全国巴宰族人向心力的主要活动之一，竭诚欢迎社会大众一起来<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E8%8B%97%E6%A0%97%E9%B2%A4%E9%B1%BC%E6%BD%AD%E8%81%9A%E8%90%BD.md#1">苗栗鲤鱼潭聚落</a>过个不一样的新年，感受巴宰族的文化魅力。</p>
+<p>巴宰族过新年历年来都以文化传承、族群融合为活动主轴，今年已是第17年举办，每年在苗栗举办的巴宰族过新年，已成为凝聚全国巴宰族人向心力的主要活动之一，竭诚欢迎社会大众一起来<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%8B%97%E6%A0%97%E9%B2%A4%E9%B1%BC%E6%BD%AD%E8%81%9A%E8%90%BD.md#1">苗栗鲤鱼潭聚落</a>过个不一样的新年，感受巴宰族的文化魅力。</p>
 <p>责任编辑：王愉悦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/6/15/n7998988.md#1">台湾荣民遭辱骂 中华民国旅美老兵谴责</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/6/30/n8053575.md#1">加拿大国庆日 中港台移民 “这个国家太美好”</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/9/20/n9650733.md#1">陈国恩转任台国安局 赖揆否认核定人事</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/9/20/n10727989.md#1">三官大帝信仰敬天惜地护水  展现客家传统智慧</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/19/1/20/n10988667.md#1">逛眷村、写春联 宪光二村新年迎春</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/19/1/26/n11002402.md#1">《幸福绿皮书》影评：温馨动人的跨种族友谊</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/20/n12892217.md#1">VLSI登场 聚焦六大热门技术发展与趋势</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12890273.md#1">竹市战备水井运作一年 北水局召开说明会释疑</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12890205.md#1">2021年报税更简单 新增手机认证及报税</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12889927.md#1">赏桐赏萤享盛宴桐花祭 享受桐花祭的盛宴</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/6/15/n7998988.md#1">台湾荣民遭辱骂 中华民国旅美老兵谴责</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/6/30/n8053575.md#1">加拿大国庆日 中港台移民 “这个国家太美好”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/9/20/n9650733.md#1">陈国恩转任台国安局 赖揆否认核定人事</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/20/n10727989.md#1">三官大帝信仰敬天惜地护水  展现客家传统智慧</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/20/n10988667.md#1">逛眷村、写春联 宪光二村新年迎春</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/26/n11002402.md#1">《幸福绿皮书》影评：温馨动人的跨种族友谊</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947160.md#1">中央地方齐心防疫 警政署长到竹县慰勉基层</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946746.md#1">幸福很简单 大川护理之家助一圆回家梦</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946681.md#1">苗消防之友会 表扬108年救灾救护有功人员</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946570.md#1">39年园区瓶颈路段有解 高峰路将要拓宽了</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10625340.md#1" target="_blank">玉清心：文革“破四旧”不堪回首 但不能遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/15/n12882802.md#1">【未解之谜】三星堆文明究竟源自哪里？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/3/3/n12785986.md#1">【命理】为何三年前后看相结果大不同？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/3/26/n12838624.md#1">昴星人传神谕  火星童留预言</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/13/n12877592.md#1">【未解之谜】希尔夫妇被外星人绑架的惊悚经历</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/2/26/n12777808.md#1">《三国演义》中的高人：神卜、神医和隐士</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12890952.md#1">【财商天下】中国庞氏骗局 贾跃亭的乐视帝国</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887969.md#1">【小宇宙传说】宇宙中最大谜题：什么是时间？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12890381.md#1">【微视频】刘长乐卖凤凰股份 马云的蚂蚁还远吗</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888141.md#1">温家宝发文疑讽当局遭微信禁 专家：政局诡谲</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888818.md#1">权斗再起 中共体制内批战狼外交等习政策</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887709.md#1">北京市检察院政治部主任马立娜坠亡</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/17/n12887210.md#1">那英《浪姐2》总决赛夺冠 陷假唱疑云登热搜</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887909.md#1">黄秋生又来台接受隔离 申请就业金卡已获准</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12889946.md#1">澎恰恰欠2亿债 吴申梅愿借钱度难关</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888429.md#1">赵丽颖台上不慎掉耳环 救场四步骤获赞超专业</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/17/n12886662.md#1">《名侦探柯南：绯色的弹丸》影评：传奇要角赤井家族 终于大放异彩</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/16/n12884330.md#1">厨房台面更换 人造石还是天然石台面好？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/11/n12872973.md#1">灭活疫苗存两风险？中国疫苗三大问题解析</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12889678.md#1">美国农夫说 鸡蛋要这样摆放才能保持新鲜</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12889418.md#1">前世有仇？ 美国大鸟丢鱼砸到卡车挡风玻璃</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887558.md#1">研究：东亚人或源自台湾 可追溯至5000年前</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nnmtsc3385/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nnmtsc3385/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/7/n11639046.htm">体验不一样的过年 “2019巴宰族过新年”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/7/n11639046.htm">体验不一样的过年 “2019巴宰族过新年”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nnmtsc3385/djy/blob/master/gb/19/11/7/n11639046.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nnmtsc3385/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nnmtsc3385/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/11/7/n11639046.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
